[tool.poetry]
name = "vectorapi"
version = "0.1.0"
description = ""
authors = ["meirzhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
cassandra-driver = "^3.29.1"
langchain-openai = "^0.1.14"
python-dotenv = "^1.0.1"
cassio = "^0.1.8"
jq = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
